--- a/_navbar.html
+++ b/_navbar.html
@@ -1,3 +1,16 @@
+<head>
+<style>
+.dropdown-menu li:hover .sub-menu {
+  visibility: visible;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+</style>
+</head>
+
+
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
 <div class="navbar-header">
@@ -23,24 +36,27 @@
 <li style="background-color: #E78AC3">
   <a href="3_sample_analyses.html">Sample Analyses</a>
 </li>
-<li style="background-color: #A6D854">
-  <a href="4_analyses.html">Birth Order Effects</a>
-</li>
-<li style="background-color: #FFD92F">
-  <a href="4_analyses_robust.html">Robustness Analyses</a>
-</li>
-<li style="background-color: #E5C494">
-  <a href="3_imputation.html">Imputation</a>
-</li>
-<li style="background-color: #B3B3B3">
-  <a href="3_imputation_check">Imputation Checks</a>
-</li>
-<li style="background-color: #A6D854">
-  <a href="4_analyses_imputed_data.html">Birth Order Effects Imputed Data</a>
-</li>
-<li style="background-color: #FFD92F">
-  <a href="4_analyses_imputed_data_robust.html">Robustness Analyses Imputed Data</a>
-</li>
+
+<li class="dropdown" style="background-color: #E5C494">
+        <a class="dropdown-toggle" href="4_analyses.html" aria-expanded="false">
+          Birth Order Effects <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" style="background-color: #E5C494">
+          <li class=""><a href="4_analyses_robust.html" aria-expanded="false" aria-controls="first-tab"> Robustness Analyses</a></li>
+        </ul>
+     </li>
+
+
+<li class="dropdown" style="background-color: #FFD92F">
+        <a class="dropdown-toggle" href="3_imputation.html" aria-expanded="false">
+          Imputed Data <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu" style="background-color: #FFD92F">
+          <li class=""><a href="3_imputation_check.html" aria-expanded="false" aria-controls="first-tab">Imputation Checks</a></li>
+          <li class=""><a href="4_analyses_imputed_data.html" aria-expanded="false" aria-controls="second-tab">Birth Order Effects Imputed Data</a></li>
+        </ul>
+     </li>
+
 
   </ul>
   <ul class="nav navbar-nav navbar-right">
@@ -55,3 +71,4 @@
 </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
+
