changed navbar for data wrangling and index page

--- a/_navbar.html
+++ b/_navbar.html
@@ -38,20 +38,22 @@
 </li>
 
 <li class="dropdown" style="background-color: #E5C494">
-        <a class="dropdown-toggle" href="4_analyses.html" aria-expanded="false">
+        <a class="dropdown-toggle" aria-expanded="false">
           Birth Order Effects <span class="caret"></span>
         </a>
         <ul class="dropdown-menu" style="background-color: #E5C494">
+          <li class=""><a href="4_analyses.html" aria-expanded="false" aria-controls="first-tab"> Main Analyses</a></li>
           <li class=""><a href="4_analyses_robust.html" aria-expanded="false" aria-controls="first-tab"> Robustness Analyses</a></li>
         </ul>
      </li>
 
 
 <li class="dropdown" style="background-color: #FFD92F">
-        <a class="dropdown-toggle" href="3_imputation.html" aria-expanded="false">
-          Imputed Data <span class="caret"></span>
+        <a class="dropdown-toggle" aria-expanded="false">
+          Birth Order Effects Imputed Data <span class="caret"></span>
         </a>
         <ul class="dropdown-menu" style="background-color: #FFD92F">
+          <li class=""><a href="3_imputation.html" aria-expanded="false" aria-controls="first-tab">Multiple Imputation</a></li>
           <li class=""><a href="3_imputation_check.html" aria-expanded="false" aria-controls="first-tab">Imputation Checks</a></li>
           <li class=""><a href="4_analyses_imputed_data.html" aria-expanded="false" aria-controls="second-tab">Birth Order Effects Imputed Data</a></li>
         </ul>
